banner-text added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
             <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
+    <section class="top-banner">
+        <div class="banner-card">
+            <img src="images/female/7.png" alt="">
+            <div class="banner-text">
+                <h4>About Me</h4>
+                <p>Hello! I am IPSHITA JAHAN CHOWDHURY "CEO" of this food company.
+                    i believe healthy food makes you fit,happy & healthy.This is my duty to provide
+                    well & nutrition food.
+                </p>
+                <a class="order-button" target="_blank" href="https://www.facebook.com/">Contact me</a>
+
+            </div>
+
+        </div>
+    </section>
 
 </body>
 
