--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 
         </div>
     </section>
+    <div class="recipies">
+        <h4>My Recipies</h4>
+        <p>Here is my recipies.These are very delicious,yummy,flavorful &
+            mouth-watering,
+            the world most delicious food is nor Massaman curry,as we suggested. </p>
+    </div>
 
 </body>
 
