--- a/index.html
+++ b/index.html
@@ -45,9 +45,78 @@
     <div class="recipies">
         <h4>My Recipies</h4>
         <p>Here is my recipies.These are very delicious,yummy,flavorful &
-            mouth-watering,
+            mouth-watering,<br>
             the world most delicious food is nor Massaman curry,as we suggested. </p>
     </div>
+    <div class="main">
+        <div class="cards">
+            <div class="image">
+                <img src="images/food/Project Cover5.png" alt="">
+            </div>
+            <div class="title">
+                <h3>No-Flip French Toast</h3>
+
+            </div>
+            <div class="des">
+                <p>In medium bowl, whisk together eggs, milk, maple syrup, vanilla, cinnamon, and nutmeg. Dip bread
+                    slices
+                    in egg mixture and arrange in a circle, overlapping, on top of berries.</p>
+
+            </div>
+        </div>
+
+        <div class="cards">
+            <div class="image">
+                <img src="images/food/Project Cover8.png" alt="">
+            </div>
+            <div class="title">
+                <h3>Mutton Cury</h3>
+
+            </div>
+            <div class="des">
+                <p>Mutton may be chewy if the meat has not been tenderized well before/during cooking. Like if it is not
+                    :
+                    Marinated (or not long enough marinated) not fully pressure-cooked.</p>
+
+            </div>
+        </div>
+
+        <div class="cards">
+            <div class="image">
+                <img src="images/food/Project Cover7.png" alt="">
+            </div>
+            <div class="title">
+                <h3>Vegetarian Curry</h3>
+
+            </div>
+            <div class="des">
+                <p>The complex flavours of curries are governed by just three things: generous spicing; onion, ginger
+                    and garlic done just right; and something to give it body.Lentils. Adding a tablespoon </p>
+
+            </div>
+        </div>
+    </div>
+    <div class="box-model">
+        <div class="box">
+            <h2>700K</h2>
+            <h5>youtube subscriber</h5>
+        </div>
+        <div class="box">
+            <h2>2.4M</h2>
+            <h5>instagram followers</h5>
+        </div>
+        <div class="box">
+            <h2>100k</h2>
+            <h5>facebook followers</h5>
+
+        </div>
+    </div>
+    <div class="food-net">
+        <h3><span class="orange-color">FOOD</span> NETWORK</h3>
+        <h5>Eat healthy to live healthy. Live healthy to live happy.</h5>
+
+    </div>
+
 
 </body>
 
